# sobfu

./: .gitignore
include/kfusion/: types.hpp
include/sobfu/: params.hpp  sob_fusion2.hpp
params/: cam_param_1.yaml  cam_param_2.yaml  cam_param_3.yaml  params_fusion4d.ini  params_k4a.ini
src/apps/: CMakeLists.txt  demo2.cpp
src/kfusion/cuda/: marching_cubes.cu  tsdf_volume.cu
src/sobfu/: sob_fusion2.cpp
